Command manager class